--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.25.0",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.6",
+    "jotai": "^1.6.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
