--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.6",
     "jotai": "^1.6.0",
+    "lodash.debounce": "^4.0.8",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -23,6 +24,7 @@
     "react-toastify": "^8.1.1"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "eslint": "8.9.0",
