--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "12.0.10",
     "react": "17.0.2",
+    "react-big-calendar": "^0.38.9",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.0",
     "react-toastify": "^8.1.1"
@@ -27,6 +28,7 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "@types/react-big-calendar": "^0.36.2",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "typescript": "4.5.5"
